removed junit 4, added spotless
a LOT of formatting changes due to spotless
changed all indents to tabs over spaces
used auto import-order
must tweak spotless, as it behaves weirdly